--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">MyAplication</string>
+    <string name="app_name" translatable="false">MyAplication</string>
+    <string name="str_first_name">First Name</string>
+    <string name="str_last_name">Last Name</string>
+    <string name="str_email">Email</string>
+    <string name="str_password">Password</string>
+    <string name="str_btn_acept">Acept</string>
+    <string name="str_btn_cancel">Cancel</string>
+    <string name="str_welcome">Welcome</string>
 </resources>
